# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linter-check.yml
brain_games/: cli.py  engine.py  even.py
brain_games/games/: __init__.py  calc.py  cli.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
